--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,21 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo $1",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "3.8.0-alpha.15",
     "@apollo/experimental-nextjs-app-support": "0.1.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "daisyui": "3.0.20",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "graphql": "16.6.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-aria-components": "1.0.0-alpha.4",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.9",
+    "server-only": "0.0.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "4.0.1",
+    "@graphql-codegen/client-preset": "4.0.0",
+    "@tailwindcss/typography": "0.5.9",
+    "dotenv": "16.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
