--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "3.8.0-alpha.15",
     "@apollo/experimental-nextjs-app-support": "0.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@react-hookz/web": "23.0.1",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
