--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "daisyui": "3.1.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "framer-motion": "10.12.16",
     "graphql": "16.6.0",
     "next": "13.4.6",
     "postcss": "8.4.24",
