--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,19 @@
   "scripts": {
     "deploy": "cdk deploy --require-approval never",
     "synth": "cdk synth",
-    "bootstrap": "cdk bootstrap --qualifier rscforum --toolkit-stack-name RSCForumBootstrap"
+    "bootstrap": "cdk bootstrap --qualifier rscforum --toolkit-stack-name RSCForumBootstrap",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@aws-appsync/eslint-plugin": "1.2.1",
     "@aws-appsync/utils": "1.2.5",
     "@types/aws-lambda": "8.10.119",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
     "aws-cdk": "2.84.0",
-    "esbuild": "0.18.4"
+    "esbuild": "0.18.4",
+    "eslint": "8.43.0",
+    "typescript": "5.1.5"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.354.0",
